fix: typo customer
